Integrate new metadata checking application, replacing Xalan for this purpose. Implement check of the UK master file each time that is generated for whatever reason.